--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   },
   "homepage": "https://github.com/JosueMixalis/part4#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "mongoose-unique-validator": "^5.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
